--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -11,38 +11,42 @@
   "author": "<%= appEmail %>",
   "license": "<%= appLicense %>",
   "dependencies": {
-    "body-parser": "^1.13.3",
-    "chalk": "^1.1.1",
-    "express": "^4.13.3",
+    "body-parser": "*",
+    "chalk": "*",
+    "express": "*",
+    "jade": "*",
     "mongoose": "^4.1.6"
   },
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.1",
-    "gulp-clean": "^0.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-if": "^1.2.5",
-    "gulp-inject": "^2.2.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-livereload": "^3.8.0",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-nodemon": "^2.0.4",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.2",
+    "gulp": "*",
+    "gulp-autoprefixer": "*",
+    "gulp-clean": "*",
+    "gulp-concat": "*",
+    "gulp-if": "*",
+    "gulp-inject": "*",
+    "gulp-jshint": "*",
+    "gulp-livereload": "*",
+    "gulp-minify-css": "*",
+    "gulp-nodemon": "*",
+    "gulp-notify": "*",
+    "gulp-rename": "*",
     <%if(styleSystem !== 'css'){%>"gulp-<%=styleSystem%>": "*",<%}%>
-    "gulp-strip-debug": "^1.0.2",
-    "gulp-uglify": "^1.4.1",
-    "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.3.5",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.9",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "main-bower-files": "^2.9.0",
-    "open": "0.0.5",
-    "phantomjs": "^1.9.18",
-    "tiny-lr": "^0.1.6",
-    "vhost": "^3.0.1",
-    "yargs": "^3.25.0"
+    <%if(postCss){%>"gulp-postcss": "*",<%}%>
+    <%if(postCss){%>"lost": "*",<%}%>
+    <%if(styleSystem === 'css'){%>"gulp-concat-css": "*",<%}%>
+    "gulp-strip-debug": "*",
+    "gulp-uglify": "*",
+    "gulp-util": "*",
+    "gulp-watch": "*",
+    "jasmine-core": "*",
+    "karma": "*",
+    "karma-jasmine": "*",
+    "karma-phantomjs-launcher": "*",
+    "main-bower-files": "*",
+    "open": "*",
+    "phantomjs": "*",
+    "tiny-lr": "*",
+    "vhost": "*",
+    "yargs": "*"
   }
 }
