--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/bogdandorca/generator-meanly#readme",
   "dependencies": {
     "chalk": "^1.1.1",
+    "mkdirp": "^0.5.1",
     "yeoman-generator": "^0.20.3",
     "yosay": "^1.0.5"
   },
